mule-user-guide/v/3.3/creating-an-oauth-2.0a-web-service-provider.adoc
= Creating an OAuth 2.0a Web Service Provider

The service provider in the link:/mule-user-guide/v/3.3/mule-secure-token-service[OAuth dance] is responsible for the following tasks:

. Provides a login page for the resource owners to enter login credentials
. Authenticate clients, both `CONFIDENTIAL` and `PUBLIC`
. Authenticates access credentials
. Issues and validates authorization codes
. Provides tokens, which specify the data to which a client may have access (scope)
. Validates tokens, thereby granting access to a protected resource
. Issues refresh tokens to clients

Note that the service provider itself does not create and issue client IDs and secrets; the mechanism responsible for registering clients creates the IDs and secrets.

Mule provides two element to configure a Web service provider to complete the above-listed tasks:

* *OAuth2 Provider* - a message processor which specifies, in each flow in an application, the OAuth2 parameters to which a flow must adhere
* *Global OAuth2 Provider* - a global element which sets the parameters that individual, in-flow OAuth2 Provider message processors reference
+
[NOTE]
This topic introduces the idea of Global Elements; if you are unfamiliar with this functionality, access link:/mule-user-guide/v/3.3/understand-global-mule-elements[Understand Global Mule Elements] to learn more about proceeding.

To create an OAuth 2.0a Web service provider, you must complete, at minimum, five tasks. The first two tasks link:/mule-user-guide/v/3.3/creating-an-oauth-2.0a-web-service-provider[define resources] which the OAuth Provider elements reference; the last three link:/mule-user-guide/v/3.3/creating-an-oauth-2.0a-web-service-provider[apply OAuth 2.0a to Mule flows], thereby initiating OAuth 2 authentication when a consumer calls the Web service. The table below lists these tasks, along with the Mule elements each uses and the OAuth tasks for which each is responsible.

[width="99",cols="5,35,25,32",options="header"]
|===
| |Task |Mule Element |OAuth Tasks
|1. |Create a Spring bean to define authentication manager and provider |Spring bean |Performing client authentication
|2. |Configure a security manager. |Mule Security Manager |Delegating client authentication
|3 |Create a Global OAuth 2.0a provider to define some OAuth parameters |Global OAuth2 Provider |Defining most of the service provider's OAuth 2.0 parameters
|4. |Create a client registration flow. |OAuth2 Provider configured to `Create Client` |Registering clients (creating client IDs and secrets)
|5. |Create OAuth Validation flows. |Outh2 Provider configured `Validate` |Validating a client, thereby granting access to a protected resource
|===

However, before tackling the work of creating an OAuth 2.0a Web service, it is important to understand the various ways in which a service provider can authenticate a client.

== Paths to Authentication

When a client calls an OAuth Web service, it must identify itself by type: `PUBLIC OF CONFIDENTIAL`.

* a `PUBLIC` client provides a client ID which the Web service provider use for authentication
* a `CONFIDENTIAL` client provides validation credentials (client ID and client secret) which the Web service provider uses for authentication

If `CONFIDENTIAL`, a client must provide validation credentials in *one* of three different parts of the request:

* in the *query*
* in the *body*
* in the *authentication header*

Where the client sends validation credentials in the *body* or *query* of the request, the OAuth Web service provider simply validates the incoming credentials (client ID and client secret) against the content in the client store. Where the client sends validation credentials in the *authentication header* of the request, the service provider uses a security manager to delegate authentication to an *authentication manager*. The authentication manager users an *authentication provider* to validate a client's http://en.wikipedia.org/wiki/Principal_(computer_security)[principals] (username and password, for example). The security manager then authenticates the client ID and client secret against the content of the client store.

Therefore, you must configure your OAuth 2.0a Web service provider to match the type(s) of client requests you expect to receive. The figure below describes the different types of requests and their resulting paths to authentication.

image:/docs/download/attachments/87687506/client_validation.png?version=1&modificationDate=1355789080866[image,align="center"]

== Defining Resources

The following procedure describes the steps to take to define the resources that the OAuth Provider and Global OAuth Provider reference. These resources — an authentication provider, an authentication manager, and a security manager — are only necessary if your Web service expects calls from `CONFIDENTIAL` clients with validation credentials in the *authentication header*. (Recall that if your Web service expects calls only from `CONFIDENTIAL` clients which provide validation credentials in the *body* or *query* of the request, your Mule application does not need to define these resources.)

. Within your Web service project in Mule, create a *Spring bean* called `ss-authentication manager`, in which you define the `authentication-provider`.
+
[source, xml, linenums]
----
<spring:beans>
        <ss:authentication-manager id="resourceOwnerAuthenticationManager"> 
            <ss:authentication-provider>
                <ss:user-service id="resourceOwnerUserService">
                    <ss:user name="john" password="doe" authorities="RESOURCE_OWNER"/>
                </ss:user-service>
            </ss:authentication-provider>
        </ss:authentication-manager>
</spring:beans>
----

. Within your Mule service project in Mule, create a *security manager* element which references the authentication manager (see example code below). (In context of an OAuth Web service, the authentication manager is the security provider.)
+
[source, xml, linenums]
----
<mule-ss:security-manager>
        <mule-ss:delegate-security-provider name="resourceOwnerSecurityProvider" delegate-ref="resourceOwnerAuthenticationManager"/>
    </mule-ss:security-manager>
----

== Creating a Global OAuth2 Provider

[WARNING]
A Mule application that exposes an OAuth 2.0a Web service provider must authenticate consumers using a list of registered clients. As *Mule Studio* does not yet fully support this particular functionality, Web services built in Studio cannot support OAuth 2.0a. See below to learn how to configure this functionality via XML or Java.

. Add a global *OAuth2 Provider* to your Mule application, at the top of your XML config file, outside all flows.
+
[source, xml, linenums]
----
<oauth2-provider:config>
</oauth2-provider:config>
----

. Add a `doc:name` attribute with a value that represents a unique name for the global element.
. Add attributes to the global element according to the table below. The column at the far left indicates an attribute is required for validating a client app and resource owner (Refer to example code below).
+
[width="99",cols="5,20,70a",options="header"]
|===
|Req'd? |Attribute |Value
| |Access Token Endpoint Path |
Location of access token endpoint required to access resource server.

Default value: `/localhost/9999/`

For example, `tweetbook/api/token`
| |Host |
Web service host

Default value: `localhost`
| |Provider Name |Name of Web service provider. For example, `TweetBook`
| |Authorization Ttl Seconds |
Lifespan of authorization code (ms).

Default value: 600 ms
| |Port |
Port on whihc the Web service is exposed

Default value: 9999
| |Client Store Reference |
In-memory object store that retains Oauth client specific information. Use this field to reference a specific, customized object store.

Default value: in-memory object store
| |Authorization Code Store Reference |In-memory object store that retains authorization codes. Use this field to reference a specific, customized object store (can be the same object store as for client store).
| |Token Store Reference |In-memory object store (can be the same as the one above) that that retains tokens. Use this field to reference a specific, customized object store (can be the same object store as for client store).
| |Authorization Endpoint Path |
Location of authorization endpoint required to access to authorization server.

Default value: `/localhost/9999/`

For example, `tweetbook/api/authorize`
| |Login Page |
URL for the service provider's end user login page. The resource owner logs into her account from this page.

Default value: org/mule/modules/oauth2/provider/www/templates/login.html
^|x |Scopes |An space-separated list in the token that defines the specific data to which the consumer has access. For example, `READ_PROFILE WRITE_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF`
| |Token Ttl Seconds |
Lifespan of token (ms).

Default value: 86400 ms
| |Connector Reference |A reference to the type of transport, which defaults to HTTP. If your application uses something other than HTTP – Jetty, HTTPS, Servlet – or you have some specific HTTP transport configurations you wish to reference, use this field to reference a specific connector.
^|x |Resource Owner Security Provider Reference |The reference to the authentication server's security provider. For example, `resourceOwnerSecurityProvider` references the Spring security manager (which, in turn, references the authentication manager spring bean).
| |Client Security Provider Reference |The reference to the security provider that validates client credentials
| |Supported Grant Types |
The type of authorization grant the OAuth Web service provider uses. Specify Authorization Code, Implicit, Resource Owner Password Credentials, Client Credentials, or reference a Spring bean.

Default value: `AUTHORIZATION_CODE`
| |Rate Limiter Reference |
References a package to define limitations for the rate at which a client can call the interface. By default, references: `org.mule.modules.oauth2.provider.rateLimit.SimpleInMemmoryRateLimiter`

Use the class to set maximumFailureCount (default = 5) and auhtResetAfterSeconds (default = 600).
| |Redirect Uris |A list of the client's valid redirect URIs
| |Enable Refresh Token |
Set to true, this attribute allows Mule to send http://tools.ietf.org/html/draft-ietf-oauth-v2-22#section-1.5[refresh tokens]

Default value: `FALSE`
|===
+
[source, xml, linenums]
----
<oauth2-provider:config
        name="oauth2Provider"
        providerName="TweetBook"
        host="localhost"
        port="${http.port}"
        authorizationEndpointPath="tweetbook/oauth/authorize"
        accessTokenEndpointPath="tweetbook/oauth/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_PROFILE WRITE_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF" doc:name="OAuth provider module">
    </oauth2-provider:config>
----

. Use of one of three following methods to define the static mechanism which registers client apps.
.. Add an `*oauth2-provider:clients*` element in the `oauth2Provider` element in your XML config file, then define the following attributes:
+
* `client ID` and secret which defines how to acquire the client ID and client secret (In the example code below, Mule access an object store to validate the `client_ID` and `client_secret`.)
* type which defines the client type (`PUBLIC` or `CONFIDENTIAL`)
* `clientName` which identifies the client app
* `description` which offers a brief description of the client app
* `redirect`-uris
* `authorizedGrantTypes` which defines the authorization grant type the Web service uses
* `scopes` which references the scopes defined in the `oauth2-provider:config`.
* (See code example, below. Mule creates a default object store, then loads the clients' information into that object store.)
+
[source, xml, linenums]
----
<oauth2-provider:config
        ...
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="${client_id}" secret="${client_secret}"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://oauth-consumer.qa.cloudhub.io*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>AUTHORIZATION_CODE</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_PROFILE</oauth2-provider:scope>
                        <oauth2-provider:scope>READ_BOOKSHELF</oauth2-provider:scope>
                        <oauth2-provider:scope>WRITE_BOOKSHELF</oauth2-provider:scope>
                        <oauth2-provider:scope>WRITE_PROFILE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
----

.. Add a Spring bean and write Java code, using the default object store.
+
In the example code below, the Spring bean invokes the initialize method of the `TweetBookInitializer` Java class. Mule generates the value of the default object store, then the Spring bean sets that value on the `clientRegistration` property.
+
[source, xml, linenums]
----
<spring:bean class="org.mule.modules.security.examples.oauth2.TweetBookInitializer"
                     init-method="initialize"
                     p:clientRegistration="#{oauth2Provider.configuration.clientStore}" />
----
+
[source, java, linenums]
----
public class TweetBookInitializer
{
    public static final String BOOKSTORE_CLIENT_ID = "e7aaf348-f08a-11e1-9237-96c6dd6a022f";
    public static final String BOOKSTORE_CLIENT_SECRET = "ee9acaa2-f08a-11e1-bc20-96c6dd6a022f";
 
    private ClientRegistration clientRegistration;
 
    public void initialize()
    {
        final Client bookstoreClient = new Client(BOOKSTORE_CLIENT_ID);
        bookstoreClient.setSecret(BOOKSTORE_CLIENT_SECRET);
        bookstoreClient.setType(ClientType.CONFIDENTIAL);
        bookstoreClient.setClientName("Mule Bookstore");
        bookstoreClient.setDescription("Mule-powered On-line Bookstore");
        bookstoreClient.getAuthorizedGrantTypes().add(RequestGrantType.AUTHORIZATION_CODE);
        bookstoreClient.getRedirectUris().add("http://localhost*");
        bookstoreClient.getScopes().addAll(
            Utils.tokenize("READ_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF WRITE_PROFILE"));
 
        clientRegistration.addClient(bookstoreClient);
    }
 
    public void setClientRegistration(final ClientRegistration clientRegistration)
    {
        this.clientRegistration = clientRegistration;
    }
}
----

.. Create a custom implementation of the object store to store client IDs and secrets.
... create an implementation of the `org.mule.modules.oauth2.provider.client.ClientStore` interface
... add a `clientStore-ref` property to the `oauth2-provider:config` element. Mule invokes the `getClientById` method of the contract to obtain client IDs and secrets.

=== Creating a Client Registration Flow

Recall that in order to use a Web service protected by OAuth 2.0a, a client must first register with the service. The following procedures describes the steps to configure a Mule flow to dynamically accept client registration requests.

. Create a Mule flow designed to accept calls from client apps requesting registration to use the service.
. To this Mule flow, add an* OAuth2 Provider* message processor.
. Optionally, add a `doc:name` attribute (*Display Name* in Studio) with a value that represents a unique name for the element in the flow.
. Add an *Operation* attribute (or use the *Operation* drop-down menu in Studio), then set the value to `Create client`.
. Add a *config-ref* attribute (*Config Reference* field in Studio) with a value that represents the name of the new global OAuth2 Provider element you created link:/mule-user-guide/v/3.3/creating-an-oauth-2.0a-web-service-provider[above].
. Add attributes to the element according to the table below. The column at the far left indicates an attribute is required for creating a client.
+
[width="60",cols="5,20,70",options="header"]
|===
|Req'd |Attribute |Value
^|x |clientId |Mule expression to assign client ID
| |clientName |
| |description |
| |principal |Mule expression to assign principal
^|x |secret |Mule expression to assign client secret
^|x |type |Mule expression to assign client type
| |redirectURIs |referencing Mule expression to ...
^|x |scopes |referencing Mule expression to ...
|===

== Creating OAuth Validation Flows

The following procedures describes the steps to configure Mule flows to accept requests for protected resources. You can create a flow that allows a client app to access just one scope of a protected resource, or multiple scopes of a protected resource. (In our example application — see code below ---, Mule uses two flows with an OAuth2 Providers: one to enable clients to access the READ_PROFILE scope, one to enable clients to access the READ_BOOKSHELF scope.)

A validation flow must contain an OAuth2 Provider message processor which defines a few of the attributes required for an OAuth 2.0a Web service provider. Generally speaking, however, the OAuth Provder message processor in a flow behaves more like a placeholder, referencing the global OAuth2 Provider element for the bulk of its processing instructions.

. Create a Mule flow designed to accept calls from client apps requesting access to a protected resource.
. To this Mule flow, add an OAuth2 Provider message processor before the point in the flow at which Mule accesses the protected resource. In other words, set the OAuth2 Provider message processor before Mule calls a database or another service to access the resource owner's private, secure data.
. Add an Operation attribute (or use the Operation drop-down menu in Studio), then set the value to one of the following:
+
* validate for authorization grant types that utilize "three-legged OAuth" (Authorization Code, Implicit, and Resource Owner Password Credentials)
* validate-client for the authorization grant type that utilizes "two-legged OAuth" (Client Credentials)

. Add a config-ref attribute (Config Reference field in Studio) with a value that represents the name of the new global OAuth2 Provider element you created above.
. Optionally, add a doc:name attribute (Display Name in Studio) with a value that represents a unique name for the element in the flow.
. Optionally, add a resourceOwnerRoles attribute with a value that specifies resource owner roles Mule enforces when validating a token.
. Optionally, add a scopes attribute with a value that represents the specific data to which a client app calling this flow will have access.
+
[source, xml, linenums]
----
<flow name="publicProfile" doc:name="publicProfile">
        <http:inbound-endpoint address="http://localhost:8084/tweetbook/api/profile" exchange-pattern="request-response" doc:name="Profile API"/>
        <oauth2-provider:validate scopes="READ_PROFILE" config-ref="oauth2Provider" doc:name="Oauth2 Provider"/>
        <component class="org.mule.security.examples.oauth2.ProfileLookupComponent" doc:name="Profile Lookup"/>
    </flow>
 
    <flow name="publicBookshelf" doc:name="publicBookshelf">
        <http:inbound-endpoint address="http://localhost:8084/tweetbook/api/bookshelf" exchange-pattern="request-response" doc:name="Bookshelf API"/>
        <oauth2-provider:validate scopes="READ_BOOKSHELF" config-ref="oauth2Provider" doc:name="Oauth2 Provider"/>
        <set-payload value="The Lord of the Rings,The Hitchhiker's Guide to the Galaxy" doc:name="Retrieve Bookshelf"/>
    </flow>
----
